# DesignPatternsModernCpp

./: .gitignore  README.md
Notes/: DesignPatternsModernCpp.docx
Sections/Adapter/: CMakeLists.txt  main.cpp
Sections/Bridge/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
Sections/Builder/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  main.cpp
Sections/Chain of Responsibility/: CMakeLists.txt  main.cpp
Sections/Command/: CMakeLists.txt  main.cpp
Sections/Composite/: CMakeLists.txt  CRTP.h  Creature.h  Graphic.h  Neuron.h  main.cpp
Sections/Decorator/: CMakeLists.txt  DynamicDecorator.h  FunctionalDecorator.h  Shapes.h  StaticDecorator.h  main.cpp
Sections/Factories/: CMakeLists.txt  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  Point.h  main.cpp
Sections/Flyweight/: CMakeLists.txt  Flyweight.h  User.h  main.cpp
Sections/Interpreter/: main.cpp
Sections/Iterator/: CMakeLists.txt  main.cpp
Sections/Mediator/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.h  Chatroom.cpp  Chatroom.h  Person.cpp  Person.h  SportingMatch.h  main.cpp
Sections/Memento/: BankAccount.h  CMakeLists.txt  main.cpp
Sections/Observer/: CMakeLists.txt  Observable.h  Observer.h  main.cpp
Sections/Prototype/: CMakeLists.txt  main.cpp
Sections/Proxy/: CMakeLists.txt  CommunicationProxy.h  PropertyProxy.h  VirtualProxy.h  main.cpp
Sections/SOLID Design Principles/: CMakeLists.txt  main.cpp
Sections/Singleton/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
